--- a/Docker/jetson/compose.yml
+++ b/Docker/jetson/compose.yml
@@ -11,8 +11,8 @@ services:
       - NVIDIA_VISIBLE_DEVICES=all
 
     runtime: nvidia
-    devices:
-      - /dev/auv_imu:/dev/auv_imu
+    # devices:
+    #   - /dev/auv_imu:/dev/auv_imu
     # image: "mcgillrobotics/auv_2024:main"
     command: bash -c "tail -f /dev/null"
     network_mode: host
