--- a/Docker/jetson/compose.yml
+++ b/Docker/jetson/compose.yml
@@ -12,9 +12,8 @@ services:
 
     runtime: nvidia
     devices:
-    #   - /dev/auv_imu:/dev/auv_imu
-      - /dev/auv_front_cam_left:/dev/auv_front_cam_left
-    #   - /dev/auv_front_cam_right:/dev/auv_front_cam_right
+      - /dev:/dev
+    privileged: true
     image: "mcgillrobotics/auv_2024:jetson"
     command: bash -c "tail -f /dev/null"
     network_mode: host
